--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jschmidtnj/imageprocessing#readme",
   "dependencies": {
     "bindings": "^1.3.0",
+    "jimp": "^0.5.4",
     "node-addon-api": "^1.5.0",
     "node-gyp": "^3.8.0"
   }
