--- a/package.json
+++ b/package.json
@@ -27,6 +27,17 @@
     "bindings": "^1.3.0",
     "jimp": "^0.5.4",
     "node-addon-api": "^1.5.0",
-    "node-gyp": "^3.8.0"
+    "node-gyp": "^3.8.0",
+    "cors": "^2.8.4",
+    "es6-promise-pool": "^2.5.0",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.3",
+    "node-mailjet": "^3.2.1",
+    "path": "^0.12.7",
+    "secure-compare": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-promise": "^3.8.0"
   }
 }
