--- a/frontend-app/firebase.json
+++ b/frontend-app/firebase.json
@@ -9,7 +9,8 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   },
   "hosting": {
     "public": "dist",
@@ -21,62 +22,102 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [{
+    "rewrites": [
+      {
         "source": "/",
         "destination": "/index.html",
-        "type" : 301
+        "type": 301
       },
       {
         "source": "/privacypolicy",
         "destination": "/privacypolicy.html",
-        "type" : 301
+        "type": 301
       },
       {
         "source": "/privacy",
         "destination": "/privacypolicy.html",
-        "type" : 301
+        "type": 301
       },
       {
         "source": "/termsandconditions",
         "destination": "/termsandconditions.html",
-        "type" : 301
+        "type": 301
       },
       {
         "source": "/terms",
         "destination": "/termsandconditions.html",
-        "type" : 301
+        "type": 301
       },
       {
         "source": "/help",
         "destination": "/help.html",
-        "type" : 301
+        "type": 301
       }
     ],
-    "headers": [{
-      "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
-      "headers": [{
-        "key": "Access-Control-Allow-Origin",
-        "value": "*"
-      }]
-    }, {
-      "source": "**/*.@(js|css)",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "max-age=604800"
-      }]
-    }, {
-      "source": "**/*.@(jpg|jpeg|gif|png)",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "max-age=604800"
-      }]
-    }, {
-      "source": "404.html",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "max-age=300"
-      }]
-    }]
+    "headers": [
+      {
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(js|css)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=604800"
+          },
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=604800"
+          },
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      },
+      {
+        "source": "404.html",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=300"
+          }
+        ]
+      },
+      {
+        "source": "index.html",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      },
+      {
+        "source": "/",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+    ]
   },
   "storage": {
     "rules": "rules/storage.rules"
