--- a/frontend-app/functions/package.json
+++ b/frontend-app/functions/package.json
@@ -17,7 +17,8 @@
     "firebase-functions": "^2.0.3",
     "node-mailjet": "^3.2.1",
     "path": "^0.12.7",
-    "secure-compare": "^3.0.1"
+    "secure-compare": "^3.0.1",
+    "jimp": "^0.5.4"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
