--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -64,6 +64,8 @@
         "datatables.net-rowreorder-bs4": "^1.2.5",
         "datatables.net-scroller-bs4": "^1.5.1",
         "datatables.net-select-bs4": "^1.2.7",
+        "echarts": "^4.2.0-rc.2",
+        "echarts-stat": "^1.1.1",
         "file-saver": "^1.3.8",
         "firebase": "^5.3.0",
         "firebaseui": "^3.1.1",
