--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -43,6 +43,7 @@
         "scriptjs": "^2.5.8",
         "serve-static": "^1.13.2",
         "style-loader": "^0.21.0",
+        "uglifyjs-webpack-plugin": "^2.0.1",
         "url-loader": "^1.1.0",
         "webpack": "^4.16.2",
         "webpack-cli": "^3.1.0",
